tests/fixtures/rbi_proto.out
error: Could not match types:

        @ __ROOT__/tests/fixtures/rbi_proto.rbi:2
      2 |    def untyped_with_stub(Integer x) => Integer
                                   ^^^^^^^ Integer, with:
        @ __ROOT__/tests/fixtures/rbi_proto.rb:8
      8 |    def typed(String y) => String
                       ^^^^^^ String

        - arising from an attempt to match:

        @ __ROOT__/tests/fixtures/rbi_proto.rbi:2
      2 |    def untyped_with_stub(Integer x) => Integer
                                   ^^^^^^^ Integer, with:
        @ __ROOT__/tests/fixtures/rbi_proto.rb:9
      9 |      untyped_with_stub(y)
                                 ^ String
        @ __ROOT__/tests/fixtures/rbi_proto.rb:9
      9 |      untyped_with_stub(y)
               ^^^^^^^^^^^^^^^^^^^^ in this expression

error: Could not match types:

        @ __ROOT__/tests/fixtures/rbi_proto.rb:8
      8 |    def typed(String y) => String
                                    ^^^^^^ String, with:
        @ __ROOT__/tests/fixtures/rbi_proto.rbi:2
      2 |    def untyped_with_stub(Integer x) => Integer
                                                 ^^^^^^^ Integer

        - arising from an attempt to match:

        @ __ROOT__/tests/fixtures/rbi_proto.rb:8
      8 |    def typed(String y) => String
                                    ^^^^^^ String, with:
        @ __ROOT__/tests/fixtures/rbi_proto.rb:9
      9 |      untyped_with_stub(y)
               ^^^^^^^^^^^^^^^^^^^^ Integer
